# test

./: .gitignore  CMakeLists.txt  README.md  main.c
.github/: CODEOWNERS
.github/workflows/: main.yml
inc/trace/: trace.h
myaction/: entrypoint.sh
src/: block.c  main.c
src/main/resources/: project-defaults.yml
src/trace/: trace.c
